# goal

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tables.rs  tries.rs
