[package]
name = "goal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.1", features = ["all-widgets"] }
reqwest = {version = "0.12.2", features = ["blocking"]}
scraper = "0.19.0"
tabled = "0.15.0"
termcolor = "1.4.1"
